# oanda_v20_platform_public

./: .gitignore  .pypirc  MANIFEST.in  readme.md  requirements.txt  setup.cfg  setup.py
oanda_v20_platform/: interactive_scratchpad.py  main.py
oanda_v20_platform/data/: marketanalysis.py  marketdata.db  marketdata.py
oanda_v20_platform/indicators/: indicators.py
oanda_v20_platform/notifier/: email.py
oanda_v20_platform/oanda/: oanda.py
oanda_v20_platform/oanda_v20_platform_public.egg-info/: PKG-INFO
oanda_v20_platform/strategies/forex_bots_python/: price_printer.py  rsi_test.py  simple_order_test.py
oanda_v20_platform/utils/: fileops.py  timer.py
src/oanda_v20_platform/: main.py
src/oanda_v20_platform/config/: args.py
src/oanda_v20_platform/data/: marketdata.db  marketdata.py
src/oanda_v20_platform/oanda/: oanda.py
src/oanda_v20_platform/strategies/forex_bots_python/: price_printer.py  simple_order_bot.py
src/oanda_v20_platform_ant358.egg-info/: PKG-INFO
tests/: test_config.py  test_fileops.py  test_hardware.py  test_main.py  test_marketdata.py  test_oanda.py  test_timer.py
