[metadata]
name = oanda_v20_plaform_public
version = 0.0.1
author = Eric Lingren
author_email = author@example.com
description = A platform to enable automated trading and market analysis with Python on the Oanda brokerage API
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 4-Clause License
keywords = python, finance, oanda, trading, forex, cfd
url = https://github.com/ant358/oanda_v20_platform_public
project_urls =
    Bug Tracker = https://github.com/ant358/oanda_v20_platform_public/issues
    Upstream Remote = https://github.com/Eric-Lingren/oanda_v20_platform_public
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = oanda_v20_plaform
packages = find:
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where = oanda_v20_plaform