[metadata]
name = oanda_v20_platform_public
version = 0.0.1
author = Eric Lingren
author_email = author@example.com
description = A platform to enable automated trading and market analysis with Python on the Oanda brokerage API
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 4-Clause License
keywords = python, finance, oanda, trading, forex, cfd
url = https://github.com/ant358/oanda_v20_platform_public
project_urls =
    Bug Tracker = https://github.com/ant358/oanda_v20_platform_public/issues
    Upstream Remote = https://github.com/Eric-Lingren/oanda_v20_platform_public
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = oanda_v20_platform
packages = find:
python_requires = >=3.7
install_requires =
    ipykernel==5.5.3
    numpy==1.20.2
    packaging==20.9
    pandas==1.2.4
    psutil==5.8.0
    pytest==6.2.4
    python-decouple==3.4
    requests==2.25.1
    schedule==1.1.0
    SQLAlchemy==1.4.14
    tulipy==0.4.0
    twilio==6.57.0
    urllib3==1.26.4

[options.packages.find]
where = oanda_v20_platform
